--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "dependencies": {
     "@tinyhttp/app": "^2.5.2",
     "@tinyhttp/logger": "^2.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "liquidjs": "^10.21.0",
+    "milliparsec": "^5.0.2",
+    "mongodb": "^6.15.0",
+    "next-session": "^4.0.5",
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "sirv": "^3.0.1",
