--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "clean": "rimraf dist && mkdir dist",
     "start": "node server/server.js",
-    "predev": "npm run clean",
+    "predev": "npm run clean && npm run build",
     "dev": "npm-run-all --parallel dev:*",
-    "dev:client": "vite --config vite.config.js",
+    "dev:client": "chokidar 'client/**/*' -c 'npm run build:client'",
     "dev:server": "nodemon server/server.js --ext js,liquid",
     "prebuild": "npm run clean",
     "build": "npm-run-all build:*",
@@ -19,6 +19,7 @@
     "@tinyhttp/app": "^2.5.2",
     "@tinyhttp/logger": "^2.1.0",
     "bcrypt": "^5.1.1",
+    "chokidar-cli": "^3.0.0",
     "dotenv": "^16.4.7",
     "liquidjs": "^10.21.0",
     "milliparsec": "^5.0.2",
